Use css to hide project-panel to prevent flicker on project route

--- a/src/scss/sections/_project-panel.scss
+++ b/src/scss/sections/_project-panel.scss
@@ -1,4 +1,6 @@
 .project-panel {
+  display: none;
+
   h1 {
     margin-bottom: 15px;
   }
